# ai-website-builder

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_old.py  config.py  pyproject.toml  requirements.txt  verify.py
.github/workflows/: ci.yml
agents/: __init__.py  ab_variant.py  art_director.py  base.py  copywriter.py  developer.py  refinement.py  reviewer.py  seo_optimizer.py  strategist.py
orchestrator/: __init__.py  pipeline.py
providers/: __init__.py  anthropic_provider.py  base_provider.py  gemini.py  openai_provider.py
storage/: __init__.py  versions.py
tests/: test_all.py
ui/: preview.py  sidebar.py  styles.py
utils/: cache.py  components.py  deploy.py  export.py
