[project]
name = "ai-website-builder"
version = "1.0.0"
description = "Multi-Agent AI Website Builder — 8 AI agents build landing pages"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "neryangel"}]

dependencies = [
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "anthropic>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
